--- a/index.html
+++ b/index.html
@@ -420,56 +420,56 @@
             </div>
             <div class="footer__social-media">
                 <h4 class="footer__title">Присоединяйтесь</h4>
-                    <ul class="social-media list">
-                        <li class="social-media__item">
-                            <a href="" class="social-media__link social-media__link_theme_dark">
-                                <svg class="social-media__icon social-media__icon_theme_dark">
-                                    <use href="./images/sprite.svg#instagram"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social-media__item">
-                            <a href="" class="social-media__link social-media__link_theme_dark">
-                                <svg class="social-media__icon social-media__icon_theme_dark">
-                                    <use href="./images/sprite.svg#twitter"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social-media__item">
-                            <a href="" class="social-media__link social-media__link_theme_dark">
-                                <svg class="social-media__icon social-media__icon_theme_dark">
-                                    <use href="./images/sprite.svg#facebook"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social-media__item">
-                            <a href="" class="social-media__link social-media__link_theme_dark">
-                                <svg class="social-media__icon social-media__icon_theme_dark">
-                                    <use href="./images/sprite.svg#linkedin"></use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
+                <ul class="social-media footer__list list">
+                    <li class="social-media__item">
+                        <a href="" class="social-media__link social-media__link_theme_dark">
+                            <svg class="social-media__icon social-media__icon_theme_dark">
+                                <use href="./images/sprite.svg#instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-media__item">
+                        <a href="" class="social-media__link social-media__link_theme_dark">
+                            <svg class="social-media__icon social-media__icon_theme_dark">
+                                <use href="./images/sprite.svg#twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-media__item">
+                        <a href="" class="social-media__link social-media__link_theme_dark">
+                            <svg class="social-media__icon social-media__icon_theme_dark">
+                                <use href="./images/sprite.svg#facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-media__item">
+                        <a href="" class="social-media__link social-media__link_theme_dark">
+                            <svg class="social-media__icon social-media__icon_theme_dark">
+                                <use href="./images/sprite.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
             </div>
-  
-    <!-- Footer form -->
-                <form class="footer__form">
-                    <div class="modal-footer">
-                        <label class="modal-footer__title">
-                            Подпишитесь на рассылку
-                            <span class="modal-footer__input-wrapper">
-                                <input type="email" name="user-email" class="modal-footer__input" required placeholder="E-mail">
-                            </span>
-                        </label>
-                        <button type="submit" class="modal-footer__btn btn">Подписаться &nbsp;
-                            <span>
-                                <svg class="modal-footer__icon">
-                                    <use href="./images/sprite.svg#send"></use>
-                                </svg>
-                            </span>
-                        </button>
-                    </div>
-                </form>
+            
+      <!-- Footer form -->
+            <form class="footer__form">
+                <div class="modal-footer">
+                    <label class="modal-footer__title">
+                        Подпишитесь на рассылку
+                        <span class="modal-footer__input-wrapper">
+                            <input type="email" name="user-email" class="modal-footer__input" required placeholder="E-mail">
+                        </span>
+                    </label>
+                    <button type="submit" class="modal-footer__btn btn">Подписаться &nbsp;
+                        <span>
+                            <svg class="modal-footer__icon">
+                                <use href="./images/sprite.svg#send"></use>
+                            </svg>
+                        </span>
+                    </button>
+                </div>
+            </form>
         </div>
 
     <!-- End footer form -->
